Update conda env

--- a/env.yml
+++ b/env.yml
@@ -33,6 +33,8 @@ dependencies:
   - xz=5.2.4=h470a237_1
   - zlib=1.2.11=h470a237_3
   - system=5.8=2
+  - joblib
+  - toml
   - pip:
     - clang==6.0.0
     - path.py==11.0.1
