--- a/gp.toml
+++ b/gp.toml
@@ -2,7 +2,11 @@ name = "OCP"
 input_folder = "/home/adam/anaconda2/envs/cqgui/include/opencascade"
 output_folder = "./generated_gp"
 
-include = ["gp*.hxx"]
+include = ["Standard*.hxx"]
+exclude = ["Standard_Handle.hxx"]
+
+exceptions = ["Standard_Failure","Standard_.+Error"]
+
 
 module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
 
@@ -31,5 +35,13 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         include_header_pre = false
         exclude_functions = [,]
         exclude_classes = ["gp_VectorWithNullMagnitude"]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.Standard]
+    
+        include_header_pre = false
+        exclude_functions = ["HashCode"]
+        exclude_classes = [,]
         include_header_post = false
         template_specializations = [,]
