--- a/gp.toml
+++ b/gp.toml
@@ -2,7 +2,7 @@ name = "OCP"
 input_folder = "/home/adam/anaconda2/envs/cqgui/include/opencascade"
 output_folder = "./generated_gp"
 
-include = ["Standard*.hxx"]
+include = ["Standard*.hxx","gp*.hxx"]
 exclude = ["Standard_Handle.hxx"]
 
 exceptions = ["Standard_Failure","Standard_.+Error"]
@@ -34,7 +34,8 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
     
         include_header_pre = false
         exclude_functions = [,]
-        exclude_classes = ["gp_VectorWithNullMagnitude"]
+        exclude_classes = [,] 
+        #"gp_VectorWithNullMagnitude"]
         include_header_post = false
         template_specializations = [,]
         
