--- a/gp.toml
+++ b/gp.toml
@@ -1,12 +1,32 @@
 name = "OCP"
 input_folder = "/home/adam/anaconda2/envs/cpp-py-bindgen/include/opencascade"
-output_folder = "./generated_gp"
+output_folder = "./generated"
 
 include = ["Standard_*.hxx",
            "gp_*.hxx",
-           "math.hxx"]
+           "math_*.hxx",
+           "NCollection_*.hxx",
+           "TColgp_*.hxx",
+           "OSD_*.hxx",
+           "Quantity_*.hxx",
+           "FSD_*.hxx",
+           "MMgt_*.hxx",
+           "TCollection_*.hxx",
+           "Storage_*.hxx",
+           "TColStd_*.hxx",
+           "Message_*.hxx",
+           "StdFail_*.hxx",
+           "TShort_*.hxx",
+           "Plugin_*.hxx",
+           "Resource_*.hxx",
+           "Units_*.hxx",
+           "UnitsAPI_*.hxx",           
+           "TopLoc_*.hxx",
+           "Poly_*.hxx",
+           "Precision_*.hxx"]
 
-exclude = ["Standard_Handle.hxx","math_GaussPoints.hxx"]
+exclude = ["Standard_Handle.hxx","Standard_Assert.hxx",
+           "math_GaussPoints.hxx","NCollection_Shared.hxx","OSD_WNT.hxx"]
 
 exceptions = ["Standard_Failure","Standard_.+Error"]
 
@@ -43,6 +63,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         exclude_functions = [,]
         exclude_classes = [,] 
         exclude_methods = [,] 
+        exclude_typedefs = ["gp_TrsfNLerp",]
         include_header_post = false
         template_specializations = [,]
         
@@ -52,6 +73,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         exclude_functions = [,]
         exclude_classes = [,]
         exclude_methods = [,]
+        exclude_typedefs = [,]
         include_header_post = false
         template_specializations = [,]
         
@@ -61,5 +83,86 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         exclude_functions = ["HashCode"]
         exclude_classes = [,]
         exclude_methods = [,]
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.NCollection]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = ["NCollection_SeqNode","NCollection_ListNode"]
+        exclude_methods = [,]
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.OSD]
+    
+        include_header_pre = false
+        exclude_functions = ["OSD_OpenStream",]
+        exclude_classes = ["OSD_Thread",]
+        exclude_methods = ["OSD_SharedLibrary::DlSymb","OSD::RealToCString"]
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.Storage]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,] 
+        exclude_typedefs = ["Storage_MapOfPers","Storage_MapOfCallBack"]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.TCollection]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = ["TCollection_ExtendedString::ToUTF8CString"] 
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.Message]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,] 
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.TColStd]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,] 
+        exclude_typedefs = ["TColStd_DataMapOfIntegerTransient","TColStd_IndexedDataMapOfTransientTransient","TColStd_DataMapOfTransientTransient"]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.Plugin]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,] 
+        exclude_typedefs = ["Plugin_MapOfFunctions",]
+        include_header_post = false
+        template_specializations = [,]
+        
+     [Modules.Units]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = ["UnitsMethods::RadianToDegree","UnitsMethods::DegreeToRadian","UnitsMethods::MirrorPCurve"] 
+        exclude_typedefs = [,]
         include_header_post = false
         template_specializations = [,]
