--- a/gp.toml
+++ b/gp.toml
@@ -2,31 +2,145 @@ name = "OCP"
 input_folder = "/home/adam/anaconda2/envs/cpp-py-bindgen/include/opencascade"
 output_folder = "./generated"
 
-include = ["Standard_*.hxx",
-           "gp_*.hxx",
-           "math_*.hxx",
-           "NCollection_*.hxx",
-           "TColgp_*.hxx",
-           "OSD_*.hxx",
-           "Quantity_*.hxx",
-           "FSD_*.hxx",
-           "MMgt_*.hxx",
-           "TCollection_*.hxx",
-           "Storage_*.hxx",
-           "TColStd_*.hxx",
-           "Message_*.hxx",
-           "StdFail_*.hxx",
-           "TShort_*.hxx",
-           "Plugin_*.hxx",
-           "Resource_*.hxx",
-           "Units_*.hxx",
-           "UnitsAPI_*.hxx",           
-           "TopLoc_*.hxx",
-           "Poly_*.hxx",
-           "Precision_*.hxx"]
+include = [
+"Standard_*.hxx",
+"gp_*.hxx",
+"math_*.hxx",
+"NCollection_*.hxx",
+"TColgp_*.hxx",
+"OSD_*.hxx",
+"Quantity_*.hxx",
+"FSD_*.hxx",
+"MMgt_*.hxx",
+"TCollection_*.hxx",
+"Storage_*.hxx",
+"TColStd_*.hxx",
+"Message_*.hxx",
+"StdFail_*.hxx",
+"TShort_*.hxx",
+"Plugin_*.hxx",
+"Resource_*.hxx",
+"Units_*.hxx",
+"UnitsAPI_*.hxx",           
+"TopLoc_*.hxx",
+"Poly_*.hxx",
+"Precision_*.hxx",
+"Expr_*.hxx",
+"ExprIntrp_*.hxx",
+"GeomAbs_*.hxx",
+"PLib_*.hxx",
+"BSplCLib_*.hxx",
+"BSplSLib_*.hxx",
+"Bnd_*.hxx",
+"CSLib_*.hxx",
+"Convert_*.hxx",
+"ElCLib_*.hxx",
+"ElSLib_*.hxx",
+"Adaptor2d_*.hxx",
+"Geom2d_*.hxx",
+"Geom2dAdaptor_*.hxx",
+"Geom2dEvaluator_*.hxx",
+"Geom2dLProp_*.hxx",
+"LProp_*.hxx",
+"TColGeom2d_*.hxx",
+"Adaptor3d_*.hxx",
+"AdvApprox_*.hxx",
+"GProp_*.hxx",
+"Geom_*.hxx",
+"GeomAdaptor_*.hxx",
+"GeomEvaluator_*.hxx",
+"GeomLProp_*.hxx",
+"LProp3d_*.hxx",
+"TColGeom_*.hxx",
+"TopAbs_*.hxx",
+"AdvApp2Var_*.hxx",
+"AppCont_*.hxx",
+"AppDef_*.hxx",
+"AppParCurves_*.hxx",
+"Approx_*.hxx",
+"BndLib_*.hxx",
+"CPnts_*.hxx",
+"Extrema_*.hxx",
+"FEmTool_*.hxx",
+"GC_*.hxx",
+"GCE2d_*.hxx",
+"GCPnts_*.hxx",
+"Geom2dConvert_*.hxx",
+"GeomConvert_*.hxx",
+"GeomLib_*.hxx",
+"GeomProjLib_*.hxx",
+"GeomTools_*.hxx",
+"Hermit_*.hxx",
+"IntAna_*.hxx",
+"IntAna2d_*.hxx",
+"ProjLib_*.hxx",
+"gce_*.hxx",
+"BRep_*.hxx",
+"BRepAdaptor_*.hxx",
+"BRepLProp_*.hxx",
+"BRepTools_*.hxx",
+"BinTools_*.hxx",
+"TopExp_*.hxx",
+"TopTools_*.hxx",
+"TopoDS_*.hxx",
+"AppBlend_*.hxx",
+#"ApproxInt_*.hxx",
+"FairCurve_*.hxx",
+"GccAna_*.hxx",
+"GccEnt_*.hxx",
+"GccInt_*.hxx",
+"Geom2dAPI_*.hxx",
+"Geom2dGcc_*.hxx",
+"Geom2dHatch_*.hxx",
+"Geom2dInt_*.hxx",
+"GeomAPI_*.hxx",
+"GeomFill_*.hxx",
+"GeomInt_*.hxx",
+"GeomPlate_*.hxx",
+"Hatch_*.hxx",
+"HatchGen_*.hxx",
+"IntCurve_*.hxx",
+"IntCurveSurface_*.hxx",
+"IntImp_*.hxx",
+"IntImpParGen_*.hxx",
+"IntPatch_*.hxx",
+"IntPolyh_*.hxx",
+"IntRes2d_*.hxx",
+"IntStart_*.hxx",
+"IntSurf_*.hxx",
+#"IntWalk_*.hxx",
+"Intf_*.hxx",
+"Law_*.hxx",
+"LocalAnalysis_*.hxx",
+"NLPlate_*.hxx",
+"Plate_*.hxx",
+"TopClass_*.hxx",
+"TopTrans_*.hxx",
+"BRepApprox_*.hxx",
+"BRepBndLib_*.hxx",
+"BRepBuilderAPI_*.hxx",
+"BRepCheck_*.hxx",
+"BRepClass_*.hxx",
+"BRepClass3d_*.hxx",
+"BRepExtrema_*.hxx",
+"BRepGProp_*.hxx",
+"BRepIntCurveSurface_*.hxx",
+"BRepLib_*.hxx",
+"BRepMAT2d_*.hxx",
+"BRepTopAdaptor_*.hxx",
+"Bisector_*.hxx",
+"IntCurvesFace_*.hxx",
+"MAT_*.hxx",
+"MAT2d_*.hxx",
+"BRepPrim_*.hxx",
+"BRepPrimAPI_*.hxx",
+"BRepSweep_*.hxx",
+"Sweep_*.hxx",
+]
 
 exclude = ["Standard_Handle.hxx","Standard_Assert.hxx",
-           "math_GaussPoints.hxx","NCollection_Shared.hxx","OSD_WNT.hxx"]
+           "math_GaussPoints.hxx","NCollection_Shared.hxx","OSD_WNT.hxx",
+           "Geom2dToIGES_Geom2dEntity.hxx","BRepGProp_Gauss.hxx"]
 
 exceptions = ["Standard_Failure","Standard_.+Error"]
 
@@ -54,6 +168,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
 [Symbols]
 
     path = "symbols.dat"
+    path_mangled = "symbols_mangled.dat"
 
 [Modules]
 
@@ -157,12 +272,132 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         include_header_post = false
         template_specializations = [,]
         
-     [Modules.Units]
+    [Modules.Units]
     
         include_header_pre = false
         exclude_functions = [,]
         exclude_classes = [,] 
         exclude_methods = ["UnitsMethods::RadianToDegree","UnitsMethods::DegreeToRadian","UnitsMethods::MirrorPCurve"] 
         exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.Poly]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = ["Poly_MakeLoops","Poly_CoherentTriPtr",]
+        exclude_methods = ["Poly_CoherentTriangulation::FindTriangle",] 
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.Expr]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = ["ExprIntrp",]
+        exclude_methods = [,] 
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.BSplCLib]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,]
+        exclude_methods = ["BSplCLib::DN",] 
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.TopoDS]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,] 
+        exclude_typedefs = ["TopoDS_ListOfShape"]
+        include_header_post = false
+        template_specializations = [,]
+    
+    [Modules.GeomInt]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]#"GeomInt_WLApprox::Perform",] 
+        exclude_typedefs = []
+        include_header_post = false
+        template_specializations = [,]
+    
+    [Modules.IntPolyh]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["IntPolyh_ArrayOfEdges","IntPolyh_ArrayOfTriangles","IntPolyh_ArrayOfPointNormal","IntPolyh_ArrayOfSectionLines","IntPolyh_ArrayOfPoints","IntPolyh_ArrayOfTangentZones"]
+        include_header_post = false
+        template_specializations = [,]    
+    
+    [Modules.BRepBuilderAPI]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["BRepBuilderAPI_CellFilter"]
+        include_header_post = false
+        template_specializations = [,]
+    
+    [Modules.MAT2D]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["MAT2d_DataMapOfIntegerConnexion"]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.MAT2D]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["BRepExtrema_MapOfIntegerPackedMapOfInteger"]
+        include_header_post = false
+        template_specializations = [,]
+        
+     [Modules.MAT]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["MAT_DataMapOfIntegerBisector","MAT_DataMapOfIntegerArc","MAT_DataMapOfIntegerBasicElt","MAT_DataMapOfIntegerNode"]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.BRepCheck]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["BRepCheck_DataMapOfShapeResult"]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.BRepClass3d]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["BRepClass3d_BndBoxTree"]
         include_header_post = false
         template_specializations = [,]
