--- a/gp.toml
+++ b/gp.toml
@@ -2,194 +2,196 @@ name = "OCP"
 input_folder = "/home/adam/anaconda2/envs/cpp-py-bindgen/include/opencascade"
 output_folder = "./generated"
 
-include = [
-"Standard_*.hxx",
-"gp_*.hxx",
-"math_*.hxx",
-"NCollection_*.hxx",
-"TColgp_*.hxx",
-"OSD_*.hxx",
-"Quantity_*.hxx",
-"FSD_*.hxx",
-"MMgt_*.hxx",
-"TCollection_*.hxx",
-"Storage_*.hxx",
-"TColStd_*.hxx",
-"Message_*.hxx",
-"StdFail_*.hxx",
-"TShort_*.hxx",
-"Plugin_*.hxx",
-"Resource_*.hxx",
-"Units_*.hxx",
-"UnitsAPI_*.hxx",           
-"TopLoc_*.hxx",
-"Poly_*.hxx",
-"Precision_*.hxx",
-"Expr_*.hxx",
-"ExprIntrp_*.hxx",
-"GeomAbs_*.hxx",
-"PLib_*.hxx",
-"BSplCLib_*.hxx",
-"BSplSLib_*.hxx",
-"Bnd_*.hxx",
-"CSLib_*.hxx",
-"Convert_*.hxx",
-"ElCLib_*.hxx",
-"ElSLib_*.hxx",
-"Adaptor2d_*.hxx",
-"Geom2d_*.hxx",
-"Geom2dAdaptor_*.hxx",
-"Geom2dEvaluator_*.hxx",
-"Geom2dLProp_*.hxx",
-"LProp_*.hxx",
-"TColGeom2d_*.hxx",
-"Adaptor3d_*.hxx",
-"AdvApprox_*.hxx",
-"GProp_*.hxx",
-"Geom_*.hxx",
-"GeomAdaptor_*.hxx",
-"GeomEvaluator_*.hxx",
-"GeomLProp_*.hxx",
-"LProp3d_*.hxx",
-"TColGeom_*.hxx",
-"TopAbs_*.hxx",
-"AdvApp2Var_*.hxx",
-"AppCont_*.hxx",
-"AppDef_*.hxx",
-"AppParCurves_*.hxx",
-"Approx_*.hxx",
-"BndLib_*.hxx",
-"CPnts_*.hxx",
-"Extrema_*.hxx",
-"FEmTool_*.hxx",
-"GC_*.hxx",
-"GCE2d_*.hxx",
-"GCPnts_*.hxx",
-"Geom2dConvert_*.hxx",
-"GeomConvert_*.hxx",
-"GeomLib_*.hxx",
-"GeomProjLib_*.hxx",
-"GeomTools_*.hxx",
-"Hermit_*.hxx",
-"IntAna_*.hxx",
-"IntAna2d_*.hxx",
-"ProjLib_*.hxx",
-"gce_*.hxx",
-"BRep_*.hxx",
-"BRepAdaptor_*.hxx",
-"BRepLProp_*.hxx",
-"BRepTools_*.hxx",
-"BinTools_*.hxx",
-"TopExp_*.hxx",
-"TopTools_*.hxx",
-"TopoDS_*.hxx",
-"AppBlend_*.hxx",
-#"ApproxInt_*.hxx",
-"FairCurve_*.hxx",
-"GccAna_*.hxx",
-"GccEnt_*.hxx",
-"GccInt_*.hxx",
-"Geom2dAPI_*.hxx",
-"Geom2dGcc_*.hxx",
-"Geom2dHatch_*.hxx",
-"Geom2dInt_*.hxx",
-"GeomAPI_*.hxx",
-"GeomFill_*.hxx",
-"GeomInt_*.hxx",
-"GeomPlate_*.hxx",
-"Hatch_*.hxx",
-"HatchGen_*.hxx",
-"IntCurve_*.hxx",
-"IntCurveSurface_*.hxx",
-"IntImp_*.hxx",
-"IntImpParGen_*.hxx",
-"IntPatch_*.hxx",
-"IntPolyh_*.hxx",
-"IntRes2d_*.hxx",
-"IntStart_*.hxx",
-"IntSurf_*.hxx",
-#"IntWalk_*.hxx",
-"Intf_*.hxx",
-"Law_*.hxx",
-"LocalAnalysis_*.hxx",
-"NLPlate_*.hxx",
-"Plate_*.hxx",
-"TopClass_*.hxx",
-"TopTrans_*.hxx",
-"BRepApprox_*.hxx",
-"BRepBndLib_*.hxx",
-"BRepBuilderAPI_*.hxx",
-"BRepCheck_*.hxx",
-"BRepClass_*.hxx",
-"BRepClass3d_*.hxx",
-"BRepExtrema_*.hxx",
-"BRepGProp_*.hxx",
-"BRepIntCurveSurface_*.hxx",
-"BRepLib_*.hxx",
-"BRepMAT2d_*.hxx",
-"BRepTopAdaptor_*.hxx",
-"Bisector_*.hxx",
-"IntCurvesFace_*.hxx",
-"MAT_*.hxx",
-"MAT2d_*.hxx",
-"BRepPrim_*.hxx",
-"BRepPrimAPI_*.hxx",
-"BRepSweep_*.hxx",
-"Sweep_*.hxx",
-"ShapeAlgo_*.hxx",
-"ShapeAnalysis_*.hxx",
-"ShapeBuild_*.hxx",
-"ShapeConstruct_*.hxx",
-"ShapeCustom_*.hxx",
-"ShapeExtend_*.hxx",
-"ShapeFix_*.hxx",
-"ShapeProcess_*.hxx",
-"ShapeProcessAPI_*.hxx",
-"ShapeUpgrade_*.hxx",
-"Contap_*.hxx",
-"HLRAlgo_*.hxx",
-"HLRAppli_*.hxx",
-"HLRBRep_*.hxx",
-"HLRTopoBRep_*.hxx",
-"Intrv_*.hxx",
-"TopBas_*.hxx",
-"TopCnx_*.hxx",
-"BRepMesh_*.hxx",
-"XBRepMesh_*.hxx",
-"BOPAlgo_*.hxx",
-"BOPDS_*.hxx",
-"BOPTools_*.hxx",
-"BRepAlgoAPI_*.hxx",
-"IntTools_*.hxx",
-"BRepAlgo_*.hxx",
-"BRepFill_*.hxx",
-"BRepProj_*.hxx",
-"TopOpeBRep_*.hxx",
-"TopOpeBRepBuild_*.hxx",
-"TopOpeBRepDS_*.hxx",
-"TopOpeBRepTool_*.hxx",
-"BRepFeat_*.hxx",
-"LocOpe_*.hxx",
-"BRepBlend_*.hxx",
-"BRepFilletAPI_*.hxx",
-"Blend_*.hxx",
-"BlendFunc_*.hxx",
-"ChFi2d_*.hxx",
-"ChFi3d_*.hxx",
-"ChFiDS_*.hxx",
-"ChFiKPart_*.hxx",
-"FilletSurf_*.hxx",
-"BRepOffset_*.hxx",
-"BRepOffsetAPI_*.hxx",
-"BiTgte_*.hxx",
-"Draft_*.hxx",
+pats = ["{}_*.hxx","{}.hxx"]
+
+modules = [
+"Standard",
+"gp",
+"math",
+"NCollection",
+"TColgp",
+"OSD",
+"Quantity",
+"Storage",
+"FSD",
+"MMgt",
+"TCollection",
+"TColStd",
+"Message",
+"StdFail",
+"TShort",
+"Plugin",
+"Resource",
+"Units",
+"UnitsAPI",           
+"TopLoc",
+"Poly",
+"Precision",
+"Expr",
+"ExprIntrp",
+"GeomAbs",
+"PLib",
+"BSplCLib",
+"BSplSLib",
+"Bnd",
+"CSLib",
+"Convert",
+"ElCLib",
+"ElSLib",
+"Adaptor2d",
+"Geom2d",
+"Geom2dAdaptor",
+"Geom2dEvaluator",
+"LProp",
+"Geom2dLProp",
+"TColGeom2d",
+"Adaptor3d",
+"AdvApprox",
+"GProp",
+"Geom",
+"GeomAdaptor",
+"GeomEvaluator",
+"GeomLProp",
+"LProp3d",
+"TColGeom",
+"TopAbs",
+"AdvApp2Var",
+"AppCont",
+"AppParCurves",
+"AppDef",
+"Approx",
+"BndLib",
+"CPnts",
+"Extrema",
+"FEmTool",
+"GC",
+"GCE2d",
+"GCPnts",
+"Geom2dConvert",
+"GeomConvert",
+"GeomLib",
+"GeomProjLib",
+"GeomTools",
+"Hermit",
+"IntAna",
+"IntAna2d",
+"ProjLib",
+"gce",
+"TopoDS",
+"BRep",
+"BRepAdaptor",
+"BRepLProp",
+"TopTools",
+"BRepTools",
+"BinTools",
+"TopExp",
+"AppBlend",
+#"ApproxInt",
+"FairCurve",
+"GccAna",
+"GccEnt",
+"GccInt",
+"Geom2dAPI",
+"Geom2dGcc",
+"IntRes2d",
+"Intf",
+"Geom2dInt",
+"Geom2dHatch",
+"GeomAPI",
+"GeomFill",
+"GeomInt",
+"GeomPlate",
+"Hatch",
+"HatchGen",
+"IntCurve",
+"IntCurveSurface",
+"IntImp",
+"IntImpParGen",
+"IntPatch",
+"IntPolyh",
+"IntStart",
+"IntSurf",
+#"IntWalk",
+"Law",
+"LocalAnalysis",
+"NLPlate",
+"Plate",
+"TopClass",
+"TopTrans",
+"BRepApprox",
+"BRepBndLib",
+"BRepBuilderAPI",
+"BRepCheck",
+"BRepClass",
+"BRepClass3d",
+"BRepExtrema",
+"BRepGProp",
+"BRepIntCurveSurface",
+"BRepLib",
+"BRepMAT2d",
+"BRepTopAdaptor",
+"Bisector",
+"IntCurvesFace",
+"MAT",
+"MAT2d",
+"BRepPrim",
+"BRepPrimAPI",
+"BRepSweep",
+"Sweep",]
+others=["ShapeAlgo",
+"ShapeAnalysis",
+"ShapeBuild",
+"ShapeConstruct",
+"ShapeCustom",
+"ShapeExtend",
+"ShapeFix",
+"ShapeProcess",
+"ShapeProcessAPI",
+"ShapeUpgrade",
+"Contap",
+"HLRAlgo",
+"HLRAppli",
+"HLRBRep",
+"HLRTopoBRep",
+"Intrv",
+"TopBas",
+"TopCnx",
+"BRepMesh",
+"XBRepMesh",
+"BOPAlgo",
+"BOPDS",
+"BOPTools",
+"BRepAlgoAPI",
+"IntTools",
+"BRepAlgo",
+"BRepFill",
+"BRepProj",
+"TopOpeBRep",
+"TopOpeBRepBuild",
+"TopOpeBRepDS",
+"TopOpeBRepTool",
+"BRepFeat",
+"LocOpe",
+"BRepBlend",
+"BRepFilletAPI",
+"Blend",
+"BlendFunc",
+"ChFi2d",
+"ChFi3d",
+"ChFiDS",
+"ChFiKPart",
+"FilletSurf",
+"BRepOffset",
+"BRepOffsetAPI",
+"BiTgte",
+"Draft",
 ]
 
-exclude = ["Standard_Handle.hxx","Standard_Assert.hxx",
+exclude = ["Standard_Handle.hxx","Standard",
            "math_GaussPoints.hxx","NCollection_Shared.hxx","OSD_WNT.hxx",
-           "Geom2dToIGES_Geom2dEntity.hxx","BRepGProp_Gauss.hxx"]
+           "Geom2dToIGES","BRepGProp_Gauss.hxx","BRepLib_CheckCurveOnSurface.hxx"]
 
-exceptions = ["Standard_Failure","Standard_.+Error"]
+exceptions = ["Standard_Failure"]
 
 
 module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
@@ -225,7 +227,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         exclude_functions = [,]
         exclude_classes = [,] 
         exclude_methods = [,] 
-        exclude_typedefs = ["gp_TrsfNLerp",]
+        exclude_typedefs = ["gp",]
         include_header_post = false
         template_specializations = [,]
         
@@ -249,11 +251,21 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         include_header_post = false
         template_specializations = [,]
         
+    [Modules.Resource]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = ["Resource_NoSuchResource",]
+        exclude_methods = [,]
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
     [Modules.NCollection]
     
         include_header_pre = false
         exclude_functions = [,]
-        exclude_classes = ["NCollection_SeqNode","NCollection_ListNode"]
+        exclude_classes = ["NCollection","NCollection_ListNode"]
         exclude_methods = [,]
         exclude_typedefs = [,]
         include_header_post = false
@@ -262,9 +274,9 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
     [Modules.OSD]
     
         include_header_pre = false
-        exclude_functions = ["OSD_OpenStream",]
-        exclude_classes = ["OSD_Thread",]
-        exclude_methods = ["OSD_SharedLibrary::DlSymb","OSD::RealToCString"]
+        exclude_functions = ["OSD","OSD_OpenStream"]
+        exclude_classes = ["OSD",]
+        exclude_methods = ["OSD::RealToCString","OSD_SharedLibrary::DlSymb"]
         exclude_typedefs = [,]
         include_header_post = false
         template_specializations = [,]
@@ -273,9 +285,9 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
     
         include_header_pre = false
         exclude_functions = [,]
-        exclude_classes = [,] 
+        exclude_classes = ["Storage_StreamExtCharParityError","Storage_StreamTypeMismatchError","Storage_StreamUnknownTypeError"] 
         exclude_methods = [,] 
-        exclude_typedefs = ["Storage_MapOfPers","Storage_MapOfCallBack"]
+        exclude_typedefs = ["Storage","Storage_MapOfCallBack","Storage_MapOfPers"]
         include_header_post = false
         template_specializations = [,]
         
@@ -305,7 +317,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         exclude_functions = [,]
         exclude_classes = [,] 
         exclude_methods = [,] 
-        exclude_typedefs = ["TColStd_DataMapOfIntegerTransient","TColStd_IndexedDataMapOfTransientTransient","TColStd_DataMapOfTransientTransient"]
+        exclude_typedefs = ["TColStd_DataMapOfIntegerTransient","TColStd","TColStd_DataMapOfTransientTransient","TColStd_IndexedDataMapOfTransientTransient"]
         include_header_post = false
         template_specializations = [,]
         
@@ -315,7 +327,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         exclude_functions = [,]
         exclude_classes = [,] 
         exclude_methods = [,] 
-        exclude_typedefs = ["Plugin_MapOfFunctions",]
+        exclude_typedefs = ["Plugin","Plugin_MapOfFunctions"]
         include_header_post = false
         template_specializations = [,]
         
@@ -333,8 +345,8 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
     
         include_header_pre = false
         exclude_functions = [,]
-        exclude_classes = ["Poly_MakeLoops","Poly_CoherentTriPtr",]
-        exclude_methods = ["Poly_CoherentTriangulation::FindTriangle",] 
+        exclude_classes = ["Poly_MakeLoops","Poly",]
+        exclude_methods = [,] 
         exclude_typedefs = [,]
         include_header_post = false
         template_specializations = [,]
@@ -374,7 +386,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         include_header_pre = false
         exclude_functions = [,]
         exclude_classes = [,] 
-        exclude_methods = [,]#"GeomInt_WLApprox::Perform",] 
+        exclude_methods = [,]#"GeomInt",] 
         exclude_typedefs = []
         include_header_post = false
         template_specializations = [,]
@@ -385,7 +397,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         exclude_functions = [,]
         exclude_classes = [,] 
         exclude_methods = [,]
-        exclude_typedefs = ["IntPolyh_ArrayOfEdges","IntPolyh_ArrayOfTriangles","IntPolyh_ArrayOfPointNormal","IntPolyh_ArrayOfSectionLines","IntPolyh_ArrayOfPoints","IntPolyh_ArrayOfTangentZones"]
+        exclude_typedefs = ["IntPolyh_ArrayOfEdges","IntPolyh_ArrayOfTriangles","IntPolyh_ArrayOfPointNormal","IntPolyh_ArrayOfSectionLines","IntPolyh","IntPolyh_ArrayOfTangentZones","IntPolyh_ArrayOfPoints"]
         include_header_post = false
         template_specializations = [,]    
     
@@ -425,7 +437,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         exclude_functions = [,]
         exclude_classes = [,] 
         exclude_methods = [,]
-        exclude_typedefs = ["MAT_DataMapOfIntegerBisector","MAT_DataMapOfIntegerArc","MAT_DataMapOfIntegerBasicElt","MAT_DataMapOfIntegerNode"]
+        exclude_typedefs = ["MAT_DataMapOfIntegerBisector","MAT_DataMapOfIntegerArc","MAT","MAT_DataMapOfIntegerNode","MAT_DataMapOfIntegerBasicElt"]
         include_header_post = false
         template_specializations = [,]
         
@@ -446,5 +458,15 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         exclude_classes = [,] 
         exclude_methods = [,]
         exclude_typedefs = ["BRepClass3d_BndBoxTree"]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.BRepClass3d]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = ["Poly_CoherentTriangulation::FindTriangle",]
+        exclude_typedefs = [,]
         include_header_post = false
         template_specializations = [,]
