--- a/gp.toml
+++ b/gp.toml
@@ -1,13 +1,13 @@
 name = "OCP"
 input_folder = "/home/adam/anaconda2/envs/cpp-py-bindgen/include/opencascade"
-output_folder = "./generated"
+output_folder = "./generated2"
 
 pats = ["{}_*.hxx","{}.hxx"]
 
-modules = [
-"Standard",
+modules = ["Standard",
 "gp",
 "math",
+"BVH",
 "NCollection",
 "TColgp",
 "OSD",
@@ -185,6 +185,29 @@ modules = [
 "BRepOffsetAPI",
 "BiTgte",
 "Draft",
+"Aspect",
+#"Cocoa",
+"Font",
+"Image",
+"InterfaceGraphic",
+"SelectBasics",
+#"TColQuantity",
+#"WNT",
+"Xw",
+"Graphic3d",
+"Prs3d",
+"PrsMgr",
+"SelectMgr",
+"AIS",
+"DsgPrs",
+"Select3D",
+"StdPrs",
+"StdSelect",
+"V3d",
+"OpenGl",
+"MeshVS",
+"NIS",
+"Voxel"
 ]
 
 exclude = ["Standard_Handle.hxx","Standard",
@@ -407,7 +430,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         exclude_functions = [,]
         exclude_classes = [,] 
         exclude_methods = [,]
-        exclude_typedefs = ["BRepBuilderAPI_CellFilter"]
+        exclude_typedefs = ["BRepBuilderAPI_CellFilter","BRepBuilderAPI_BndBoxTree"]
         include_header_post = false
         template_specializations = [,]
     
@@ -471,7 +494,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         include_header_post = false
         template_specializations = [,]
     
-    [Modules.BRepAlgo]
+    [Modules.HLRBRep]
     
         include_header_pre = false
         exclude_functions = [,]
@@ -496,7 +519,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         include_header_pre = "BOPAlgo_Builder.hxx"
         exclude_functions = [,]
         exclude_classes = [,] 
-        exclude_methods = [,]
+        exclude_methods = ["BRepAlgoAPI_BuilderAlgo::Builder",] #this will be fixed by the include
         exclude_typedefs = ["TopOpeBRepDS_ShapeSurface"]
         include_header_post = false
         template_specializations = [,]
@@ -506,7 +529,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         include_header_pre = false
         exclude_functions = [,]
         exclude_classes = [,] 
-        exclude_methods = ["TopOpeBRep_DSFiller::PShapeClassifier","TopOpeBRep_FaceEdgeFiller::PShapeClassifier"]
+        exclude_methods = ["TopOpeBRep_DSFiller::PShapeClassifier","TopOpeBRep_FaceEdgeFiller::PShapeClassifier","TopOpeBRep_FacesFiller::PShapeClassifier"]
         exclude_typedefs = ["TopOpeBRep_DataMapOfTopolTool"]
         include_header_post = false
         template_specializations = [,]
@@ -546,7 +569,7 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         include_header_pre = false
         exclude_functions = [,]
         exclude_classes = ["BRepMesh_Triangle",] #constructor with int&[3]
-        exclude_methods = ["BRepMesh_GeomTool::IntLinLin",]
+        exclude_methods = ["BRepMesh_GeomTool::IntLinLin","BRepMesh_DataStructureOfDelaun::ElementNodes"]
         exclude_typedefs = [,]
         include_header_post = false
         template_specializations = [,]
@@ -560,8 +583,113 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         exclude_typedefs = ["TopOpeBRepTool_IndexedDataMapOfSolidClassifier"]
         include_header_post = false
         template_specializations = [,]
-        
-        
-        
     
+    [Modules.BOPTools]
     
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["BOPTools_BoxBndTree"]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.Aspect]
+    
+        include_header_pre = "struct __GLXFBConfigRec {};"
+        exclude_functions = [,]
+        exclude_classes = []
+        exclude_methods = ["Aspect_NeutralWindow::NativeFBConfig","Aspect_Window::NativeFBConfig","Aspect_NeutralWindow::SetNativeHandles","Aspect_DisplayConnection::GetDisplay"]
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.SelectMgr]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["SelectMgr_IndexedMapOfOwner","SelectMgr_MapOfObjectSensitives","SelectMgr_FrustumCache","SelectMgr_IndexedMapOfHSensitive"]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.OpenGl]
+    
+        include_header_pre = "#include <Message_Messenger.hxx>"
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["OpenGl_SequenceOfLayers","OpenGl_SetterList","OpenGl_MapOfHatchStylesAndIds","OpenGl_MapOfZLayerSettings","OpenGl_IndexedMapOfStructure","OpenGl_MapOfShaderPrograms","OpenGl_IndexedMapOfStructure"]
+        include_header_post = false
+        template_specializations = [,]
+    
+    [Modules.StdSelect]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["StdSelect_IndexedDataMapOfOwnerPrs"]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.Xw]
+    
+        include_header_pre = "struct __GLXFBConfigRec {};"
+        exclude_functions = [,]
+        exclude_classes = []
+        exclude_methods = []
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.MeshVS]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["MeshVS_NodePair","MeshVS_DataMapOfIntegerOwner","MeshVS_DataMapOfHArray1OfSequenceOfInteger","MeshVS_DataMapOfIntegerMeshEntityOwner"]
+        include_header_post = false
+        template_specializations = [,]
+        
+    [Modules.AIS]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = ["AIS_DataMapOfShapeDrawer","AIS_DataMapOfIOStatus","AIS_DataMapOfILC","AIS_IndexedDataMapOfOwnerPrs"]
+    
+    [Modules.Font]
+    
+        include_header_pre = "struct FT_LibraryRec_ {};"
+        exclude_functions = [,]
+        exclude_classes = []
+        exclude_methods = []
+        exclude_typedefs = [,]
+        include_header_post = false
+        template_specializations = [,]
+
+    [Modules.Select3D]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["Select3D_IndexedMapOfEntity","Graphic3d_Vec3d","Select3D_BndBox3d"]  #couldn't deduce template parameter ‘Hasher’
+        include_header_post = false
+        template_specializations = [,]
+    
+    [Modules.Graphic3d]
+    
+        include_header_pre = false
+        exclude_functions = [,]
+        exclude_classes = [,] 
+        exclude_methods = [,]
+        exclude_typedefs = ["Graphic3d_IndexedMapOfView","Graphic3d_IndexedMapOfAddress","Graphic3d_MapOfStructure","Graphic3d_NMapOfTransient","Graphic3d_MapOfObject","Graphic3d_Vec4u","Graphic3d_Vec2u","Graphic3d_Vec3u","Graphic3d_Vec3d"]
+        include_header_post = false
+        template_specializations = [,]
