--- a/gp.toml
+++ b/gp.toml
@@ -418,11 +418,12 @@ module_mapping = "lambda x: Path(x).splitpath()[-1].split('.')[0].split('_')[0]"
         
     [Modules.AIS]
     
-        include_body_pre = "auto OptionsForAttach = [](){return AIS_Manipulator::OptionsForAttach();};"
+        include_body_pre = "auto OptionsForAttach = [](){return AIS_Manipulator::OptionsForAttach();}; py::class_<AIS_Manipulator::OptionsForAttach>(m,\"AIS_Manipulator_OptionsForAttach\");"
         exclude_typedefs = ["AIS_DataMapOfShapeDrawer","AIS_DataMapOfIOStatus","AIS_DataMapOfILC","AIS_IndexedDataMapOfOwnerPrs"]
     
     [Modules.Font]
     
+        exclude_classes = ["Font_BRepFont"]
         include_header_pre = "struct FT_LibraryRec_ {};"
 
     [Modules.Select3D]
