Added additional deps to env.yml so that env would build and run.sh would run.

--- a/env.yml
+++ b/env.yml
@@ -1,5 +1,6 @@
 name: cpp-py-bindgen
 channels:
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
@@ -37,5 +38,12 @@ dependencies:
   - toml
   - pip:
     - clang==6.0.0
+    - click
+    - cymbal
+    - jinja2
+    - logzero
+    - pandas
     - path.py==11.0.1
     - pyparsing
+    - schema
+    - tqdm
